--- a/streams/vexbolts/countdown.html
+++ b/streams/vexbolts/countdown.html
@@ -3,7 +3,7 @@
 <script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometerleading.js"></script>
  
 <body>
-  <span id="text">Time Until Unfollow Campaign</span>
+  <span id="text">Time Until Unfollow Campaign</span><br>
     <span id="hours" class="odometer">00</span><span>:</span><span id="minutes" class="odometer">00</span><span>:</span><span id="seconds" class="odometer">00</span>
 </body>
 <style>
@@ -17,7 +17,7 @@
     }
 
   #text {
-    font-size: 50px;
+    font-size: 30px;
   }
   
 </style>
