--- a/streams/newyears2025/index.html
+++ b/streams/newyears2025/index.html
@@ -306,7 +306,7 @@
             duration: 0.5 * 1000,
             removeLeadingZeros: true,
             reverseAnimation: false,
-            format: "dddd:ddd:dd:dd:dd:dd",
+            format: "dddd:ddd:dd:dd:dd",
             upColor: "white"
         }
     }
