--- a/matthewstats/ttcountervsyt/index.html
+++ b/matthewstats/ttcountervsyt/index.html
@@ -22,7 +22,7 @@
             <img id="image2" style="width: 125px; height: 125px; border-radius: 50%; margin-top: -5em; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default.png">
             <h2 id="name2" onclick="search2()" style="margin-top: 1px; font-size: var(--title-font-size, 4.5vh)">Loading</h2>
             <h2 id="subs2" style="margin-top: -20px; font-size: var(--counter-font-size, 8vh)" class="odometer">0</h2>
-            <h5 id="footer2" style="margin-top: -40px;">Followers (Instagram)</h5>
+            <h5 id="footer2" style="margin-top: -40px;">Followers (TikTok)</h5>
         </div>
     </div>
     <center>
@@ -34,6 +34,7 @@
 <script src="https://huntingstats378.github.io/HuntingStats378/main/assets/ess/odometer.js"></script>
 <script>
   const searchParams1 = new URLSearchParams(window.location.search);
+    const searchParams2 = new URLSearchParams(window.location.search);
   const id1 = searchParams1.get("id1") || "UCX6OQ3DkcsbYNE6H8uQQuVA";
   const name = searchParams2.get("id2") || "MrBeast";
     let tid;
