--- a/main/assets/counts/tiktok/index.html
+++ b/main/assets/counts/tiktok/index.html
@@ -134,10 +134,10 @@ if (studio == true) {
         });
 }
 if (est === 0) {
-    fetch(`https://mixerno.space/api/youtube-channel-counter/user/${id}`)
+    fetch(`https://countik.com/api/userinfo?sec_user_id=${id}`)
         .then((res) => res.json())
         .then((data) => {
-            count = goal - data.counts[counter].count;
+            count = goal - data.followerCount;
             if (count < 0) {
             document.getElementById("count").innerHTML = Math.abs(count);
             } else
