--- a/matthewstats/igcountervsyt/index.html
+++ b/matthewstats/igcountervsyt/index.html
@@ -12,14 +12,14 @@
     <div style="height: auto; display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px;">
         <div style="padding: 0px 4px; text-align: center; background-color: var(--counter-bg-color, black);">
             <img id="banner1" style="filter: blur(4px); border-radius: 15px; object-fit: cover; width: 100%; height: 150px; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default_banner.png">
-            <img id="image1" style="width: 125px; height: 125px; border-radius: 50%; margin-top: -5em; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default.png">
+            <img id="image1" style="width: 125px; height: 125px; border-radius: 50%; margin-top: -10em; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default.png">
             <h2 id="name1" onclick="search1()" style="margin-top: 1px; font-size: var(--title-font-size, 4.5vh)">Loading</h2>
             <h2 id="subs1" style="margin-top: -20px; font-size: var(--counter-font-size, 8vh)" class="odometer">0</h2>
             <h5 id="footer1" style="margin-top: -40px;">Subscribers (Loading)</h5>
         </div>
         <div style="height: auto; padding: 0px 4px; text-align: center; background-color: var(--counter-bg-color, black);">
             <img id="banner2" style="filter: blur(4px); border-radius: 15px; object-fit: cover; width: 100%; height: 150px; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default_banner.png">
-            <img id="image2" style="width: 125px; height: 125px; border-radius: 50%; margin-top: -5em; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default.png">
+            <img id="image2" style="width: 125px; height: 125px; border-radius: 50%; margin-top: -10em; position: relative;" src="https://huntingstats378.github.io/HuntingStats378/main/images/default.png">
             <h2 id="name2" onclick="search2()" style="margin-top: 1px; font-size: var(--title-font-size, 4.5vh)">Loading</h2>
             <h2 id="subs2" style="margin-top: -20px; font-size: var(--counter-font-size, 8vh)" class="odometer">0</h2>
             <h5 id="footer2" style="margin-top: -40px;">Followers (Instagram)</h5>
@@ -36,32 +36,13 @@
   const searchParams1 = new URLSearchParams(window.location.search);
   const id1 = searchParams1.get("id1") || "UCX6OQ3DkcsbYNE6H8uQQuVA";
   const searchParams2 = new URLSearchParams(window.location.search);
-  const id2 = searchParams2.get("id2") || "kendalljenner";
+  const id2 = searchParams2.get("id2") || "kimkardashian";
   let status1
         let status2
         let subs1
         let subs2
 
-                fetch(
-                    `https://corsproxy.io/?https://studio.nia-statistics.com/api/channel/${id1}`
-                )
-                .then((res) => res.json())
-                .then((data) => {
-                    status1 = data.success;
-                    });
-
-                fetch(
-                    `https://nia-statistics.com/api/get?platform=youtube&type=channel&id=${id1}`
-                )
-                .then((res) => res.json())
-                .then((data) => {
-                    document.getElementById("banner1").src = `https://banner.yt/${id1}`;
-                    document.getElementById("image1").src = data.snippet.thumbnails.high.url;
-                    document.getElementById("name1").textContent = data.snippet.title;
-                });
-
     setInterval(() => {
-        if (status1 == false) {
                         fetch(
                                 `https://mixerno.space/api/youtube-channel-counter/user/${id1}`
                             )
@@ -78,21 +59,6 @@
                                 document.getElementById("footer1").textContent = "Subscribers (Estimated)";
                                 }
                             });
-                } else { 
-                        fetch(
-                                `https://corsproxy.io/?https://studio.nia-statistics.com/api/channel/${id1}`
-                            )
-                            .then((res) => res.json())
-                            .then((data) => {
-                                document.getElementById("banner1").src = `https://banner.yt/${id1}`;
-                                document.getElementById("image1").src = data.currentChannels.image;
-                                document.getElementById("name1").textContent = data.currentChannels.name;
-                                document.getElementById("subs1").innerHTML = data.channels.counts[2].count;
-                                subs1 = data.channels.counts[2].count;
-                                document.getElementById("footer1").textContent = "Subscribers (YT Studio)";
-                                status1 = data.success;
-                            });
-                }
                     }, 2000);
 
     setInterval(() => {
