--- a/matthewstats/igcountervsyt/index.html
+++ b/matthewstats/igcountervsyt/index.html
@@ -44,14 +44,14 @@
 
     setInterval(() => {
                         fetch(
-                                `https://mixerno.space/api/youtube-channel-counter/user/${id1}`
+                                `http://huntingstats378.onrender.com/api/youtube/channel/${id1}`
                             )
                             .then((res) => res.json())
                             .then((data) => {
                                 document.getElementById("banner1").src = `https://banner.tf/${id1}`;
-                                document.getElementById("image1").src = data.user[1].count;
-                                document.getElementById("name1").textContent = data.user[0].count;
-                                document.getElementById("subs1").innerHTML = data.counts[0].count;
+                                document.getElementById("image1").src = `https://banner.tf/${id1}/avatar`;
+                                document.getElementById("name1").textContent = data.info.channelName;
+                                document.getElementById("subs1").innerHTML = data.stats.subCount;
                                 subs1 = data.counts[0].count;
                                 if (id1 == "UCX6OQ3DkcsbYNE6H8uQQuVA") {
                                 document.getElementById("footer1").textContent = "Subscribers (YT Studio)";
