--- a/matthewstats/igcountervsyt/index.html
+++ b/matthewstats/igcountervsyt/index.html
@@ -52,7 +52,7 @@
                                 document.getElementById("image1").src = `https://banner.tf/${id1}/avatar`;
                                 document.getElementById("name1").textContent = data.info.channelName;
                                 document.getElementById("subs1").innerHTML = data.stats.subCount;
-                                subs1 = data.counts[0].count;
+                                subs1 = data.stats.subCount;
                                 if (id1 == "UCX6OQ3DkcsbYNE6H8uQQuVA") {
                                 document.getElementById("footer1").textContent = "Subscribers (YT Studio)";
                                 } else {
