--- a/matthewstats/igcountervsyt/index.html
+++ b/matthewstats/igcountervsyt/index.html
@@ -50,13 +50,13 @@
                             .then((data) => {
                                 document.getElementById("banner1").src = `https://banner.tf/${id1}`;
                                 document.getElementById("image1").src = `https://banner.tf/${id1}/avatar`;
-                                document.getElementById("name1").textContent = data.info.channelName;
-                                document.getElementById("subs1").innerHTML = data.stats.subCount;
+                                document.getElementById("name1").textContent = data.user[0];
+                                document.getElementById("subs1").innerHTML = data.counts[0];
                                 subs1 = data.stats.subCount;
                                 if (id1 == "UCX6OQ3DkcsbYNE6H8uQQuVA") {
-                                document.getElementById("footer1").textContent = "Subscribers (YT Studio)";
+                                document.getElementById("footer1").textContent = "Subscribers (STUDIO)";
                                 } else {
-                                document.getElementById("footer1").textContent = "Subscribers (Estimated)";
+                                document.getElementById("footer1").textContent = "Subscribers (EST)";
                                 }
                             });
                     }, 2000);
