--- a/streams/mrbeastrise/clock.html
+++ b/streams/mrbeastrise/clock.html
@@ -1,54 +1,54 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900&display=swap"
+  rel="stylesheet">
 <link rel=stylesheet href="https://lcedit.com/odometer/odometer.css">
 <script src="https://lcedit.com/odometer/odometer.js"></script>
+
 <body>
-  <span id="time" class="odometer">0</span>
-  <span id="date" class="odometer">0</span>
+  <span id="time" class="odometer">0</span><br><span id="date" class="odometer">0</span><span> UTC</span>
 </body>
 <style>
   body {
     background-color: transparent;
-    font-size: 100px;
+    font-size: 50px;
     font-family: Roboto;
     text-align: right;
     font-weight: 700;
     color: white;
   }
 
-  #date {
-    font-size: 50px;
-  ]
-  
+  #time {
+    font-size: 100px;
+  }
 </style>
 <script>
-    odometers = Odometer.init();
-    odometers[0].options = {
-        animation: "minimal",
-        downColor: "white",
-        duration: 0.5 * 1000,
-        removeLeadingZeros: true,
-        reverseAnimation: false,
-        format: "dd:dd:dd",
-        upColor: "white"
-    };
+  odometers = Odometer.init();
+  odometers[0].options = {
+    animation: "minimal",
+    downColor: "white",
+    duration: 0.5 * 1000,
+    removeLeadingZeros: true,
+    reverseAnimation: false,
+    format: "dd:dd:dd",
+    upColor: "white"
+  };
 
-    odometers[1].options = {
-        animation: "minimal",
-        downColor: "white",
-        duration: 0.5 * 1000,
-        removeLeadingZeros: true,
-        reverseAnimation: false,
-        format: "dddd-dd-dd",
-        upColor: "white"
-    };
+  odometers[1].options = {
+    animation: "minimal",
+    downColor: "white",
+    duration: 0.5 * 1000,
+    removeLeadingZeros: true,
+    reverseAnimation: false,
+    format: "dddd-dd-dd",
+    upColor: "white"
+  };
 
-    function padZero(number) {
-        return String(number).padStart(2, '0');
-    }
+  function padZero(number) {
+    return String(number).padStart(2, '0');
+  }
 
-    setInterval(() => {
-      const d = new Date();
-      document.getElementById("time").innerHTML = `${padZero(d.getHours().toString())}${padZero(d.getMinutes().toString())}${padZero(d.getSeconds().toString())}`;
-      document.getElementById("date").innerHTML = `${padZero(d.getFullYear().toString())}${padZero((d.getMonth() + 1).toString())}${padZero(d.getDate().toString())}`;
-    }, 0);
+  setInterval(() => {
+    const d = new Date();
+    document.getElementById("time").innerHTML = `${padZero(d.getUTCHours().toString())}${padZero(d.getUTCMinutes().toString())}${padZero(d.getUTCSeconds().toString())}`;
+    document.getElementById("date").innerHTML = `${padZero(d.getUTCFullYear().toString())}${padZero((d.getUTCMonth() + 1).toString())}${padZero(d.getUTCDate().toString())}`;
+  }, 0);
 </script>
